--- a/Medecamentcss.css
+++ b/Medecamentcss.css
@@ -10,6 +10,28 @@ header {
     text-align: center;
     padding: 20px;
 }
+
+nav ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    background: #005bb5;
+}
+nav ul li {
+    margin: 0 15px;
+}
+nav ul li a {
+    color: white;
+    text-decoration: none;
+    padding: 10px;
+    display: block;
+}
+nav ul li a:hover {
+    background: #004494;
+    border-radius: 5px;
+}
 main {
     padding: 20px;
 }
@@ -39,4 +61,21 @@ footer {
     padding: 10px;
     background: #0073e6;
     color: white;
+}
+footer section {
+    margin-bottom: 10px;
+}
+#contact {
+    background-color: #222;  /* Темніший фон для виділення */
+    padding: 15px;
+    margin-top: 10px;
+    border-radius: 5px;
+}
+
+#contact h3 {
+    color: #ffcc00; /* Жовтий заголовок для контрасту */
+}
+
+#contact p {
+    margin: 5px 0;
 }
