--- a/Contact.css
+++ b/Contact.css
@@ -57,6 +57,10 @@ img {
     margin-bottom: 10px;
 }
 footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
     text-align: center;
     padding: 10px;
     background: #0073e6;
@@ -66,14 +70,14 @@ footer section {
     margin-bottom: 10px;
 }
 #contact {
-    background-color: #222;
+    background-color: #222;  /* Темніший фон для виділення */
     padding: 15px;
     margin-top: 10px;
     border-radius: 5px;
 }
 
 #contact h3 {
-    color: #ffcc00
+    color: #ffcc00; /* Жовтий заголовок для контрасту */
 }
 
 #contact p {
