--- a/Active-Vygil.css
+++ b/Active-Vygil.css
@@ -57,7 +57,7 @@ img {
     margin-bottom: 10px;
 }
 footer {
-    position: fixed;
+    position: absolute;
     bottom: 0;
     left: 0;
     width: 100%;
