--- a/Golovnacss.css
+++ b/Golovnacss.css
@@ -56,7 +56,7 @@ img {
     margin-bottom: 10px;
 }
 footer {
-    position: fixed;
+    position: absolute;
     bottom: 0;
     left: 0;
     width: 100%;
