--- a/Contact.css
+++ b/Contact.css
@@ -71,7 +71,7 @@ footer section {
     margin-bottom: 10px;
 }
 #contact {
-    background-color: #222;  /* Темніший фон для виділення */
+    background-color: #222;
     padding: 15px;
     margin-top: 10px;
     border-radius: 5px;
