--- a/Golovnacss.css
+++ b/Golovnacss.css
@@ -69,14 +69,14 @@ footer section {
     margin-bottom: 10px;
 }
 #contact {
-    background-color: #222;  /* Темніший фон для виділення */
+    background-color: #222;
     padding: 15px;
     margin-top: 10px;
     border-radius: 5px;
 }
 
 #contact h3 {
-    color: #ffcc00; /* Жовтий заголовок для контрасту */
+    color: #ffcc00;
 }
 
 #contact p {
