--- a/Golovnacss.css
+++ b/Golovnacss.css
@@ -32,7 +32,6 @@ body {
     transition: 0.3s;
 }
 
-/* Стилі для мобільного меню */
 @media (max-width: 768px) {
     nav ul {
         display: none;
@@ -52,6 +51,10 @@ body {
 
     .burger-menu {
         display: block;
+    }
+    header h1 {
+        opacity: 0;
+        transition: opacity 0.3s ease-in-out;
     }
 }
 
@@ -95,7 +98,7 @@ nav ul li a:hover {
     transform: scale(1.05);
 }
 
-/* Основний контент */
+
 main {
     padding: 40px 20px;
 }
