--- a/Medecamentcss.css
+++ b/Medecamentcss.css
@@ -9,7 +9,7 @@ body {
     background-repeat: no-repeat; 
     background-attachment: fixed; 
 }
-/* Бургер-меню */
+
 .burger-menu {
     display: none;
     cursor: pointer;
@@ -28,7 +28,6 @@ body {
     transition: 0.3s;
 }
 
-/* Стилі для мобільного меню */
 @media (max-width: 768px) {
     nav ul {
         display: none;
@@ -48,6 +47,10 @@ body {
 
     .burger-menu {
         display: block;
+    }
+    header h1 {
+        opacity: 0;
+        transition: opacity 0.3s ease-in-out;
     }
 }
 /* Хедер */
@@ -86,7 +89,6 @@ nav ul li a:hover {
     transform: scale(1.05);
 }
 
-/* Контейнер для препаратів */
 .drug-container {
     display: flex;
     flex-wrap: wrap;
@@ -95,7 +97,6 @@ nav ul li a:hover {
     padding: 20px;
 }
 
-/* Картка препарату */
 .drug-card {
     background: white;
     padding: 20px;
