--- a/Contact.css
+++ b/Contact.css
@@ -57,10 +57,13 @@ body {
     }
     .form-row {
         flex-direction: column;
-        align-items: center;
+        align-items: stretch;
+        width: 100%;
     }
 
     input {
+        max-width: none;
+        box-sizing: border-box;
         width: 100%;
     }
 }
